--- a/snippets/quick-add-modal.liquid
+++ b/snippets/quick-add-modal.liquid
@@ -135,9 +135,10 @@
     @media screen and (max-width: 750px) {
       display: flex;
       flex-direction: column;
-      grid-column: 2 / -1;
-      grid-row: 1;
-      padding-right: var(--padding-2xl);
+      gap: var(--gap-xs);
+      grid-column: 1 / -1;
+      grid-row: 2;
+      padding-inline: 0;
     }
   }
 
@@ -333,6 +334,10 @@
     top: 0;
     animation: fadeIn 0.4s var(--animation-timing-fade-in) both;
 
+    @media screen and (max-width: 750px) {
+      grid-column: 1 / -1;
+    }
+
     @media screen and (min-width: 750px) {
       position: sticky;
       grid-column: 1 / 4;
@@ -347,9 +352,10 @@
   }
 
   .quick-add-modal__content .product-information__media media-gallery {
-    pointer-events: none;
+    pointer-events: auto;
 
     @media screen and (min-width: 750px) {
+      pointer-events: none;
       position: absolute;
       inset: 0;
     }
@@ -369,10 +375,13 @@
 
   .quick-add-modal__content .product-information__media slideshow-slides {
     display: flex;
-    flex-direction: column;
-    gap: var(--gap-2xs);
-    overflow: visible;
-    scroll-snap-type: none;
+
+    @media screen and (min-width: 750px) {
+      flex-direction: column;
+      gap: var(--gap-2xs);
+      overflow: visible;
+      scroll-snap-type: none;
+    }
   }
 
   .quick-add-modal__content .product-information__media slideshow-slide {
@@ -384,12 +393,6 @@
     opacity: 1;
     visibility: visible;
     transition: opacity 0.3s var(--animation-easing);
-  }
-
-  .quick-add-modal__content .product-information__media slideshow-slide[aria-hidden='true'] {
-    @media screen and (max-width: 750px) {
-      display: none;
-    }
   }
 
   .quick-add-modal__content .product-information__media slideshow-slide:nth-child(1) {
